# wppmpy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hello.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
src/example_finitebasis_gaussian/: example_finitebasis_gaussian.ipynb
src/hong_etal_2025/: download_data.py  ellipses_from_fits.ipynb  ellipses_from_tables.ipynb
tests/: test_basis_posterior.py  test_toolbox_basis_posterior.py
toolbox/basis_posterior/: basis_posterior.py
