[project]
name = "wppmpy"
version = "0.1.0"
requires-python = ">=3.12"

# Core dependencies (needed for the toolbox and first notebook)
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
# Install with:  pip install -e ".[notebooks]"
# Pulls in the paper repo (jax, pandas, scikit-image, shapely, etc.) from GitHub.
# JAX note: this installs the CPU-only build.  For GPU support install
# jax[cuda12] separately; see https://jax.readthedocs.io/en/latest/installation.html
notebooks = [
    "ellipsoids-elife2025 @ git+https://github.com/fh862/ellipsoids_eLife2025.git#subdirectory=ellipsoids",
    "pandas",
    "jupyter",
]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["toolbox*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
follow_imports = "normal"
exclude = "(^|/)(\\.venv|venv|\\.git|\\.tox|build|dist)(/|$)"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
